fix broken layouts

--- a/map-app/src/index.css
+++ b/map-app/src/index.css
@@ -2,7 +2,7 @@
 
 @source "../index.html";
 @source "./**/*.{js,ts,jsx,tsx}";
-@source "../node_modules/narrative-ui/src/**/*.{js,ts,jsx,tsx}";
+@source "../../node_modules/narrative-ui/src/**/*.{js,ts,jsx,tsx}";
 
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark;
